src/omega/parser/gen/EscriptParser.py
# Generated from EscriptParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class EscriptParser ( Parser ):

    grammarFileName = "EscriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'then'", "'elseif'", "'endif'", 
                     "'else'", "'goto'", "'return'", "'const'", "'var'", 
                     "'do'", "'dowhile'", "'while'", "'endwhile'", "'exit'", 
                     "'function'", "'endfunction'", "'exported'", "'use'", 
                     "'include'", "'break'", "'continue'", "'for'", "'endfor'", 
                     "'to'", "'foreach'", "'endforeach'", "'repeat'", "'until'", 
                     "'program'", "'endprogram'", "'case'", "'default'", 
                     "'endcase'", "'enum'", "'endenum'", "'downto'", "'step'", 
                     "'reference'", "'out'", "'inout'", "'ByVal'", "'string'", 
                     "'long'", "'integer'", "'unsigned'", "'signed'", "'real'", 
                     "'float'", "'double'", "'as'", "'is'", "'&&'", "'and'", 
                     "'||'", "'or'", "'!'", "'not'", "'byref'", "'unused'", 
                     "'error'", "'hash'", "'dictionary'", "'struct'", "'array'", 
                     "'stack'", "'in'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'.'", "'->'", "'*'", "'/'", "'%'", "'+'", "'-'", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'<='", "'<'", "'>='", 
                     "'>'", "'>>'", "'<<'", "'&'", "'^'", "'|'", "'<>'", 
                     "'!='", "'='", "'=='", "':='", "'.+'", "'.-'", "'.?'", 
                     "';'", "','", "'~'", "'@'", "'::'", "':'", "'++'", 
                     "'--'", "'?:'" ]

    symbolicNames = [ "<INVALID>", "IF", "THEN", "ELSEIF", "ENDIF", "ELSE", 
                      "GOTO", "RETURN", "TOK_CONST", "VAR", "DO", "DOWHILE", 
                      "WHILE", "ENDWHILE", "EXIT", "FUNCTION", "ENDFUNCTION", 
                      "EXPORTED", "USE", "INCLUDE", "BREAK", "CONTINUE", 
                      "FOR", "ENDFOR", "TO", "FOREACH", "ENDFOREACH", "REPEAT", 
                      "UNTIL", "PROGRAM", "ENDPROGRAM", "CASE", "DEFAULT", 
                      "ENDCASE", "ENUM", "ENDENUM", "DOWNTO", "STEP", "REFERENCE", 
                      "TOK_OUT", "INOUT", "BYVAL", "STRING", "TOK_LONG", 
                      "INTEGER", "UNSIGNED", "SIGNED", "REAL", "FLOAT", 
                      "DOUBLE", "AS", "IS", "AND_A", "AND_B", "OR_A", "OR_B", 
                      "BANG_A", "BANG_B", "BYREF", "UNUSED", "TOK_ERROR", 
                      "HASH", "DICTIONARY", "STRUCT", "ARRAY", "STACK", 
                      "TOK_IN", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", 
                      "BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", 
                      "CHAR_LITERAL", "STRING_LITERAL", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "LBRACE", "RBRACE", "DOT", "ARROW", 
                      "MUL", "DIV", "MOD", "ADD", "SUB", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "LE", "LT", 
                      "GE", "GT", "RSHIFT", "LSHIFT", "BITAND", "CARET", 
                      "BITOR", "NOTEQUAL_A", "NOTEQUAL_B", "EQUAL_DEPRECATED", 
                      "EQUAL", "ASSIGN", "ADDMEMBER", "DELMEMBER", "CHKMEMBER", 
                      "SEMI", "COMMA", "TILDE", "AT", "COLONCOLON", "COLON", 
                      "INC", "DEC", "ELVIS", "WS", "COMMENT", "LINE_COMMENT", 
                      "IDENTIFIER" ]

    RULE_compilationUnit = 0
    RULE_moduleUnit = 1
    RULE_moduleDeclarationStatement = 2
    RULE_moduleFunctionDeclaration = 3
    RULE_moduleFunctionParameterList = 4
    RULE_moduleFunctionParameter = 5
    RULE_topLevelDeclaration = 6
    RULE_functionDeclaration = 7
    RULE_stringIdentifier = 8
    RULE_useDeclaration = 9
    RULE_includeDeclaration = 10
    RULE_programDeclaration = 11
    RULE_statement = 12
    RULE_statementLabel = 13
    RULE_ifStatement = 14
    RULE_gotoStatement = 15
    RULE_returnStatement = 16
    RULE_constStatement = 17
    RULE_varStatement = 18
    RULE_doStatement = 19
    RULE_whileStatement = 20
    RULE_exitStatement = 21
    RULE_breakStatement = 22
    RULE_continueStatement = 23
    RULE_forStatement = 24
    RULE_foreachIterableExpression = 25
    RULE_foreachStatement = 26
    RULE_repeatStatement = 27
    RULE_caseStatement = 28
    RULE_enumStatement = 29
    RULE_block = 30
    RULE_variableDeclarationInitializer = 31
    RULE_enumList = 32
    RULE_enumListEntry = 33
    RULE_switchBlockStatementGroup = 34
    RULE_switchLabel = 35
    RULE_forGroup = 36
    RULE_basicForStatement = 37
    RULE_cstyleForStatement = 38
    RULE_identifierList = 39
    RULE_variableDeclarationList = 40
    RULE_variableDeclaration = 41
    RULE_programParameters = 42
    RULE_programParameterList = 43
    RULE_programParameter = 44
    RULE_functionParameters = 45
    RULE_functionParameterList = 46
    RULE_functionParameter = 47
    RULE_scopedFunctionCall = 48
    RULE_functionReference = 49
    RULE_expression = 50
    RULE_primary = 51
    RULE_explicitArrayInitializer = 52
    RULE_explicitStructInitializer = 53
    RULE_explicitDictInitializer = 54
    RULE_explicitErrorInitializer = 55
    RULE_bareArrayInitializer = 56
    RULE_parExpression = 57
    RULE_expressionList = 58
    RULE_expressionSuffix = 59
    RULE_indexingSuffix = 60
    RULE_navigationSuffix = 61
    RULE_methodCallSuffix = 62
    RULE_functionCall = 63
    RULE_structInitializerExpression = 64
    RULE_structInitializerExpressionList = 65
    RULE_structInitializer = 66
    RULE_dictInitializerExpression = 67
    RULE_dictInitializerExpressionList = 68
    RULE_dictInitializer = 69
    RULE_arrayInitializer = 70
    RULE_literal = 71
    RULE_integerLiteral = 72
    RULE_floatLiteral = 73

    ruleNames =  [ "compilationUnit", "moduleUnit", "moduleDeclarationStatement", 
                   "moduleFunctionDeclaration", "moduleFunctionParameterList", 
                   "moduleFunctionParameter", "topLevelDeclaration", "functionDeclaration", 
                   "stringIdentifier", "useDeclaration", "includeDeclaration", 
                   "programDeclaration", "statement", "statementLabel", 
                   "ifStatement", "gotoStatement", "returnStatement", "constStatement", 
                   "varStatement", "doStatement", "whileStatement", "exitStatement", 
                   "breakStatement", "continueStatement", "forStatement", 
                   "foreachIterableExpression", "foreachStatement", "repeatStatement", 
                   "caseStatement", "enumStatement", "block", "variableDeclarationInitializer", 
                   "enumList", "enumListEntry", "switchBlockStatementGroup", 
                   "switchLabel", "forGroup", "basicForStatement", "cstyleForStatement", 
                   "identifierList", "variableDeclarationList", "variableDeclaration", 
                   "programParameters", "programParameterList", "programParameter", 
                   "functionParameters", "functionParameterList", "functionParameter", 
                   "scopedFunctionCall", "functionReference", "expression", 
                   "primary", "explicitArrayInitializer", "explicitStructInitializer", 
                   "explicitDictInitializer", "explicitErrorInitializer", 
                   "bareArrayInitializer", "parExpression", "expressionList", 
                   "expressionSuffix", "indexingSuffix", "navigationSuffix", 
                   "methodCallSuffix", "functionCall", "structInitializerExpression", 
                   "structInitializerExpressionList", "structInitializer", 
                   "dictInitializerExpression", "dictInitializerExpressionList", 
                   "dictInitializer", "arrayInitializer", "literal", "integerLiteral", 
                   "floatLiteral" ]

    EOF = Token.EOF
    IF=1
    THEN=2
    ELSEIF=3
    ENDIF=4
    ELSE=5
    GOTO=6
    RETURN=7
    TOK_CONST=8
    VAR=9
    DO=10
    DOWHILE=11
    WHILE=12
    ENDWHILE=13
    EXIT=14
    FUNCTION=15
    ENDFUNCTION=16
    EXPORTED=17
    USE=18
    INCLUDE=19
    BREAK=20
    CONTINUE=21
    FOR=22
    ENDFOR=23
    TO=24
    FOREACH=25
    ENDFOREACH=26
    REPEAT=27
    UNTIL=28
    PROGRAM=29
    ENDPROGRAM=30
    CASE=31
    DEFAULT=32
    ENDCASE=33
    ENUM=34
    ENDENUM=35
    DOWNTO=36
    STEP=37
    REFERENCE=38
    TOK_OUT=39
    INOUT=40
    BYVAL=41
    STRING=42
    TOK_LONG=43
    INTEGER=44
    UNSIGNED=45
    SIGNED=46
    REAL=47
    FLOAT=48
    DOUBLE=49
    AS=50
    IS=51
    AND_A=52
    AND_B=53
    OR_A=54
    OR_B=55
    BANG_A=56
    BANG_B=57
    BYREF=58
    UNUSED=59
    TOK_ERROR=60
    HASH=61
    DICTIONARY=62
    STRUCT=63
    ARRAY=64
    STACK=65
    TOK_IN=66
    DECIMAL_LITERAL=67
    HEX_LITERAL=68
    OCT_LITERAL=69
    BINARY_LITERAL=70
    FLOAT_LITERAL=71
    HEX_FLOAT_LITERAL=72
    CHAR_LITERAL=73
    STRING_LITERAL=74
    LPAREN=75
    RPAREN=76
    LBRACK=77
    RBRACK=78
    LBRACE=79
    RBRACE=80
    DOT=81
    ARROW=82
    MUL=83
    DIV=84
    MOD=85
    ADD=86
    SUB=87
    ADD_ASSIGN=88
    SUB_ASSIGN=89
    MUL_ASSIGN=90
    DIV_ASSIGN=91
    MOD_ASSIGN=92
    LE=93
    LT=94
    GE=95
    GT=96
    RSHIFT=97
    LSHIFT=98
    BITAND=99
    CARET=100
    BITOR=101
    NOTEQUAL_A=102
    NOTEQUAL_B=103
    EQUAL_DEPRECATED=104
    EQUAL=105
    ASSIGN=106
    ADDMEMBER=107
    DELMEMBER=108
    CHKMEMBER=109
    SEMI=110
    COMMA=111
    TILDE=112
    AT=113
    COLONCOLON=114
    COLON=115
    INC=116
    DEC=117
    ELVIS=118
    WS=119
    COMMENT=120
    LINE_COMMENT=121
    IDENTIFIER=122

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None






    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EscriptParser.EOF, 0)

        def topLevelDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EscriptParser.TopLevelDeclarationContext)
            else:
                return self.getTypedRuleContext(EscriptParser.TopLevelDeclarationContext,i)


        def getRuleIndex(self):
            return EscriptParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = EscriptParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -3242591711666448446) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 302655968720752633) != 0):
                self.state = 148
                self.topLevelDeclaration()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 154
            self.match(EscriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EscriptParser.EOF, 0)

        def moduleDeclarationStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EscriptParser.ModuleDeclarationStatementContext)
            else:
                return self.getTypedRuleContext(EscriptParser.ModuleDeclarationStatementContext,i)


        def getRuleIndex(self):
            return EscriptParser.RULE_moduleUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuleUnit" ):
                listener.enterModuleUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuleUnit" ):
                listener.exitModuleUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleUnit" ):
                return visitor.visitModuleUnit(self)
            else:
                return visitor.visitChildren(self)




    def moduleUnit(self):

        localctx = EscriptParser.ModuleUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_moduleUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8 or _la==122:
                self.state = 156
                self.moduleDeclarationStatement()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(EscriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleDeclarationStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moduleFunctionDeclaration(self):
            return self.getTypedRuleContext(EscriptParser.ModuleFunctionDeclarationContext,0)


        def constStatement(self):
            return self.getTypedRuleContext(EscriptParser.ConstStatementContext,0)


        def getRuleIndex(self):
            return EscriptParser.RULE_moduleDeclarationStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuleDeclarationStatement" ):
                listener.enterModuleDeclarationStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuleDeclarationStatement" ):
                listener.exitModuleDeclarationStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleDeclarationStatement" ):
                return visitor.visitModuleDeclarationStatement(self)
            else:
                return visitor.visitChildren(self)




    def moduleDeclarationStatement(self):

        localctx = EscriptParser.ModuleDeclarationStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_moduleDeclarationStatement)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [122]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.moduleFunctionDeclaration()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.constStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleFunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(EscriptParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(EscriptParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(EscriptParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(EscriptParser.SEMI, 0)

        def moduleFunctionParameterList(self):
            return self.getTypedRuleContext(EscriptParser.ModuleFunctionParameterListContext,0)


        def getRuleIndex(self):
            return EscriptParser.RULE_moduleFunctionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuleFunctionDeclaration" ):
                listener.enterModuleFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuleFunctionDeclaration" ):
                listener.exitModuleFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleFunctionDeclaration" ):
                return visitor.visitModuleFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def moduleFunctionDeclaration(self):

        localctx = EscriptParser.ModuleFunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_moduleFunctionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(EscriptParser.IDENTIFIER)
            self.state = 169
            self.match(EscriptParser.LPAREN)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==122:
                self.state = 170
                self.moduleFunctionParameterList()


            self.state = 173
            self.match(EscriptParser.RPAREN)
            self.state = 174
            self.match(EscriptParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleFunctionParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moduleFunctionParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EscriptParser.ModuleFunctionParameterContext)
            else:
                return self.getTypedRuleContext(EscriptParser.ModuleFunctionParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EscriptParser.COMMA)
            else:
                return self.getToken(EscriptParser.COMMA, i)

        def getRuleIndex(self):
            return EscriptParser.RULE_moduleFunctionParameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuleFunctionParameterList" ):
                listener.enterModuleFunctionParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuleFunctionParameterList" ):
                listener.exitModuleFunctionParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleFunctionParameterList" ):
                return visitor.visitModuleFunctionParameterList(self)
            else:
                return visitor.visitChildren(self)




    def moduleFunctionParameterList(self):

        localctx = EscriptParser.ModuleFunctionParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_moduleFunctionParameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.moduleFunctionParameter()
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==111:
                self.state = 177
                self.match(EscriptParser.COMMA)
                self.state = 178
                self.moduleFunctionParameter()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleFunctionParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(EscriptParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(EscriptParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(EscriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return EscriptParser.RULE_moduleFunctionParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuleFunctionParameter" ):
                listener.enterModuleFunctionParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuleFunctionParameter" ):
                listener.exitModuleFunctionParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleFunctionParameter" ):
                return visitor.visitModuleFunctionParameter(self)
            else:
                return visitor.visitChildren(self)




    def moduleFunctionParameter(self):

        localctx = EscriptParser.ModuleFunctionParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_moduleFunctionParameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(EscriptParser.IDENTIFIER)
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==106:
                self.state = 185
                self.match(EscriptParser.ASSIGN)
                self.state = 186
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def useDeclaration(self):
            return self.getTypedRuleContext(EscriptParser.UseDeclarationContext,0)


        def includeDeclaration(self):
            return self.getTypedRuleContext(EscriptParser.IncludeDeclarationContext,0)


        def programDeclaration(self):
            return self.getTypedRuleContext(EscriptParser.ProgramDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(EscriptParser.FunctionDeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(EscriptParser.StatementContext,0)


        def getRuleIndex(self):
            return EscriptParser.RULE_topLevelDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelDeclaration" ):
                listener.enterTopLevelDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelDeclaration" ):
                listener.exitTopLevelDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelDeclaration" ):
                return visitor.visitTopLevelDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def topLevelDeclaration(self):
